Fix layout issue in Chrome.

--- a/public/app/ui/components/controls/ListControlsComponent.less
+++ b/public/app/ui/components/controls/ListControlsComponent.less
@@ -1,6 +1,6 @@
 .list-controls-container {
-    ul.list-inline > li {
-        padding-right: 0;
+    > div {
+        display: inline-table;
     }
 
     ul.pagination.pagination-sm {
